# bumpin-trade

./: .gitignore  Anchor.toml  Cargo.toml  buffer-keypair.json  devnet_init.sh  localnet_init.sh  package-lock.json  package.json  rustfmt.toml  tsconfig.json  ubuntu_init.sh
programs/bumpin-trade/: Cargo.toml
programs/bumpin-trade/src/: errors.rs  ids.rs  lib.rs  macros.rs
programs/bumpin-trade/src/instructions/: constraints.rs  mod.rs
programs/bumpin-trade/src/instructions/account/: deposit.rs  initialize_user.rs  mod.rs  user.rs  withdraw.rs
programs/bumpin-trade/src/instructions/admin/: initialize_dao_rewards.rs  initialize_market.rs  initialize_pool.rs  initialize_pool_rewards.rs  initialize_rewards.rs  initialize_state.rs  initialize_trade_token.rs  mod.rs
programs/bumpin-trade/src/instructions/keeper/: adl.rs  collect_rewards.rs  execute_order.rs  execute_portfolio_order.rs  execute_wallet_order.rs  liquidate_position.rs  mod.rs  rebalance.rs  update_user_status.rs
programs/bumpin-trade/src/instructions/liquidate/: liquidate_cross_position.rs  liquidate_isolate_position.rs  liquidate_position.rs  mod.rs  update_user_status.rs
programs/bumpin-trade/src/instructions/order/: cancel_perp_order.rs  mod.rs  place_perp_order.rs
programs/bumpin-trade/src/instructions/order/cancel/: mod.rs  portfolio_cancel_order.rs  wallet_cancel_order.rs
programs/bumpin-trade/src/instructions/order/place/: mod.rs  (+2 more)
programs/bumpin-trade/src/instructions/pool/: access_controller.rs  initialize_pool.rs  mod.rs  pool_stake.rs  pool_un_stake.rs
programs/bumpin-trade/src/instructions/portfolio/: initialize_trade_token.rs  mod.rs
programs/bumpin-trade/src/instructions/position/: add_position_margin.rs  mod.rs  update_position_leverage.rs
programs/bumpin-trade/src/instructions/reward/: auto_compound.rs  claim_reward.rs  collect_rewards.rs  mod.rs
programs/bumpin-trade/src/instructions/risk/: adl.rs  mod.rs
programs/bumpin-trade/src/instructions/utils/: cal_utils.rs  calculator.rs  mod.rs  swap.rs
programs/bumpin-trade/src/math/: bn.rs  casting.rs  constants.rs  mod.rs  safe_math.rs  safe_unwrap.rs
programs/bumpin-trade/src/processor/: balance_processor.rs  fee_processor.rs  fee_reward_processor.rs  market_processor.rs  mod.rs  optional_accounts.rs  pool_processor.rs  position_processor.rs  re_balance_processor.rs  rebalance_processor.rs  stake_processor.rs  user_processor.rs
programs/bumpin-trade/src/state/: bump_events.rs  dao_rewards.rs  market.rs  market_map.rs  mod.rs  oracle.rs  oracle_map.rs  pool.rs  pool_map.rs  pool_rewards.rs  rewards.rs  rewards_map.rs  state.rs  trade_token.rs  trade_token_map.rs  user.rs  user_map.rs  vault_map.rs
programs/bumpin-trade/src/state/infrastructure/: fee_reward.rs  market_funding_fee.rs  mod.rs  poo_token_balance.rs  pool_borrowing_fee.rs  user_order.rs  user_position.rs  user_stake.rs  user_token.rs
programs/bumpin-trade/src/state/oracle/: mod.rs  oracle.rs  oracle_map.rs
programs/bumpin-trade/src/utils/: mod.rs  pda.rs  signer.rs  token.rs
programs/pyth/: Cargo.toml
programs/pyth/src/: lib.rs  pc.rs  pcv2.rs
(+87 files in other folders)
