[package]
name = "bumpin-trade"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "bumpin_trade"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build", ]

[dependencies]
anchor-lang = "0.30.1"
anchor-spl = { version = "0.30.1" }
pyth-sdk-solana = "0.10"
num-traits = "0.2"
uint = { version = "0.9", default-features = false }
arrayref = "0.3"