[package]
name = "bumpin-trade"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "bumpin_trade"

[features]
default = []
mainnet-beta = []
localnet = []
devnet = []
testnet = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build", "bumpin-trade-attribute/idl-build"]

[dependencies]
bumpin-trade-attribute = { path = "../../bumpin-trade-attribute" }
anchor-lang = { version = "0.30.1", features = ["anchor-debug"] }
anchor-spl = { version = "0.30.1" }
pyth-sdk-solana = "0.10"
num-traits = "0.2"
uint = { version = "0.10", default-features = false }
bytemuck = { version = "1" }
arrayref = "0.3"
#whirlpool-cpi = { git = "https://github.com/orca-so/whirlpool-cpi", branch = "anchor/0.30.1" }
pyth-solana-receiver-sdk ="0.3"