[package]
name = "pyth"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "pyth"

[features]
no-entrypoint = []
no-idl = []
cpi = ["no-entrypoint"]
default = ["local-net"]
local-net = []
anchor-test = []
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]



[dependencies]
anchor-lang = "0.30.0"
anchor-spl = { version = "0.30.0" }
arrayref = "0.3.6"
bytemuck = { version = "1.4.0" }
pyth-sdk-solana = "0.10"